improving visibility issue of letter

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -105,7 +105,6 @@ p{
 }
 
 #innerLetter {
-    height: 100%;
     width: 90%;
     margin: 0 auto;
     padding-bottom: 10vh;
